(lang dune 3.7)

(name colors)

(generate_opam_files true)

(source
 (github primalivet/colors))

(authors "primalivet")

(maintainers "primalivet")

(license LICENSE)

(documentation https://github.com/primalivet/colors)

(package
 (name colors)
 (synopsis "Try color scales")
 (description "View and edit different scales of colors")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
